activate code coverage, even though it will be embarrassing

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,12 @@
 language: R
 sudo: false
 cache: packages
+
+r_binary_packages:
+  - devtools
+  - tidyverse
+  - Rcpp
+  - bindrcpp
+
+after_success:
+  - Rscript -e 'covr::codecov()'
