add funcs useful for mcmc homework

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,12 @@ export(linspace)
 export(logspace)
 export(lzy_chr)
 export(lzy_impute)
+export(mcmc_hpd_int)
+export(mcmc_stats)
+export(mcmc_trace)
 export(mutate_by)
 export(na_counts)
+export(ones_like)
 export(rand_n_groups)
 export(remove_na)
 export(rmse)
@@ -15,10 +19,12 @@ export(spread_keep)
 export(spread_keep_)
 export(spread_repeated)
 export(summarize_by)
+export(t_mcmc)
 export(to_na)
 export(top_n_groups)
 export(unite_at)
 export(var_plot)
+export(zeros_like)
 import(dplyr)
 import(ggplot2)
 importFrom(dplyr,distinct)
