--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Imports:
     magrittr,
     rlang,
     tibble,
-    tidyr
+    tidyr,
+    purrr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -19,3 +20,4 @@ Suggests: knitr,
     testthat,
     covr
 VignetteBuilder: knitr
+
