--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ Imports:
     rlang,
     tibble,
     tidyr,
-    purrr
+    purrr,
+    knitr,
+    kableExtra
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -20,4 +22,3 @@ Suggests: knitr,
     testthat,
     covr
 VignetteBuilder: knitr
-
