tweaks for R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(constants_like,numeric)
 S3method(perc,default)
 S3method(perc,logical)
 S3method(perc,numeric)
+export("%>%")
 export(allclose)
 export(autoplot)
 export(beta_ols)
@@ -44,7 +45,7 @@ export(zeros_like)
 import(dplyr)
 import(ggplot2)
 import(rlang)
-importFrom(dplyr,count)
+import(tibble)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
@@ -55,6 +56,8 @@ importFrom(dplyr,tbl_vars)
 importFrom(ggplot2,autoplot)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
+importFrom(purrr,map_dbl)
+importFrom(purrr,pmap)
 importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(tidyr,gather)
