--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Hayeslib
 Version: 0.0.0.9000
 Authors@R: person("Alex", "Hayes", email = "alexpghayes@gmail.com", role = c("aut", "cre"))
 Description: Personal utility functions and data analyses.
-Imports:
+Imports: 
     dplyr (>= 0.5.0.9005),
     ggplot2 (>= 2.2.0),
     magrittr,
@@ -12,13 +12,17 @@ Imports:
     tidyr,
     purrr,
     knitr,
-    kableExtra
+    kableExtra,
+    broom
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: knitr,
+Suggests: 
     rmarkdown,
     testthat,
-    covr
+    covr,
+    glmnet,
+    coda,
+    MASS
 VignetteBuilder: knitr
