--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(autoplot,cv.glmnet)
 S3method(constants_like,array)
 S3method(constants_like,matrix)
 S3method(constants_like,numeric)
+S3method(constants_like,vector)
 S3method(perc,default)
 S3method(perc,logical)
 S3method(perc,numeric)
@@ -11,9 +12,13 @@ export("%>%")
 export(allclose)
 export(autoplot)
 export(beta_ols)
-export(combine)
+export(blam)
+export(compare_coefs)
 export(constants_like)
 export(count_non_na)
+export(diag_like)
+export(dmvn_arma)
+export(get_shareable_link_to_data)
 export(ggpie)
 export(linspace)
 export(logspace)
@@ -31,6 +36,8 @@ export(perc)
 export(quad_form)
 export(remove_na)
 export(rmse)
+export(rmvn)
+export(rmvn_arma)
 export(rmvn_ql)
 export(sample_n_feats)
 export(sample_n_groups)
@@ -40,24 +47,40 @@ export(t_df)
 export(t_mcmc)
 export(to_na)
 export(top_n_groups)
+export(unblam)
 export(var_plot)
+export(yell)
 export(zeros_like)
 import(dplyr)
 import(ggplot2)
-import(rlang)
-import(tibble)
+importFrom(Rcpp,sourceCpp)
+importFrom(broom,tidy)
+importFrom(dplyr,count)
 importFrom(dplyr,distinct)
+importFrom(dplyr,enquo)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,quos)
 importFrom(dplyr,select)
 importFrom(dplyr,select_vars)
+importFrom(dplyr,summarize)
 importFrom(dplyr,tbl_vars)
+importFrom(dplyr,top_n)
 importFrom(ggplot2,autoplot)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
 importFrom(purrr,map_dbl)
-importFrom(purrr,pmap)
+importFrom(purrr,map_dfr)
+importFrom(rlang,"!!")
+importFrom(rlang,UQS)
 importFrom(rlang,expr)
+importFrom(rlang,quo_name)
+importFrom(rlang,quos)
 importFrom(rlang,sym)
+importFrom(stats,pnorm)
+importFrom(tibble,tibble)
 importFrom(tidyr,gather)
+useDynLib(hayeslib, .registration = TRUE)
